# new_blog

./: .gitignore  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
assets/: script.js
assets/scripts/: list-item.component.js  script.js
assets/styles/: input.css  output.css
public/: max-chisaki-mode.css
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  pages.rs  types.rs
src/component/: about.rs  blog.rs  drawer.rs  home.rs  mod.rs  navbar.rs
style/: input.css  output.css
templates/: article.html  index.html  list.html
