[package]
name = "new_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.2" }
axum-extra = {version = "0.9.0", features = ["typed-header"]}
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
time = { version = "0.3.30", features = [
    "serde",
    "serde-well-known",
    "local-offset",
    "std",
    "macros",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
comrak = { version = "0.20.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
mimalloc = "0.1.39"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
