[package]
name = "new_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-extra = {version = "0.9.2", features = ["typed-header"]}
axum-server = {version = "0.6.0", features = ["tls-openssl"]}
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time", "parking_lot"] }
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
time = { version = "0.3.31", features = [
    "serde",
    "serde-well-known",
    "local-offset",
    "std",
    "macros",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
comrak = { version = "0.20.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["trace", "compression-full"] }
mimalloc = "0.1.39"
temp-file = "0.1.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
